[package]
name = "retina-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60.1" 
cc = "1.0.66"

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
chrono = "0.4"
crossbeam-channel = "0.5.1"
csv = "1.1.6"
ctrlc = { version = "3.1.7", features = ["termination"] }
indexmap = "1.6.2"
itertools = "0.10.0"
log = { version = "0.4", features = ["release_max_level_info"] }
pnet = "0.27.2"
tabled = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0"
toml = "0.5.8"

[features]
timing = []
mlx5 = []
default = ["mlx5"]
